[package]
name = "memoi"
authors = ["IAMCAR10 kadamlita@gmail.com"]
license = "MIT"
description = "IN DEVELOPMENT tool to memorize stuff."
homepage = "https://github.com/IAMACAR10/memoi"
repository = "https://github.com/IAMACAR10/memoi"
version = "0.1.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
text_io = "0.1.10"
